--- a/Project 3 Reviews/index.html
+++ b/Project 3 Reviews/index.html
@@ -22,7 +22,7 @@
                 <p class="person-job">Web Developer</p>
                 <hr class="grey medium">
                 <p class="person-about">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime dolore aut enim libero beatae repellendus, magni distinctio! Eligendi ullam perferendis dolore iste ipsa! Rerum, ipsum. Fuga ex cupiditate reiciendis modi, exercitationem rerum illum nemo enim, ipsum tempora corrupti eveniet esse.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime dolore aut enim libero beatae repellendus, magni distinctio! Eligendi ullam perupti eveniet esse.
                 </p>
                 <div class="slider">
                     <span class="left"><</span> <span class="right">></span>
