--- a/Project 3 Reviews/index.html
+++ b/Project 3 Reviews/index.html
@@ -17,7 +17,7 @@
         </header>
         <main class="main">
             <div class="card">
-                <img src="#" alt="#" class="person-photo">
+                <div class="person-photo"></div>
                 <h1 class="person-name">Susan Smith</h1>
                 <p class="person-job">Web Developer</p>
                 <hr class="grey medium">
