2nd project style finished

--- a/Project 3 Reviews/index.html
+++ b/Project 3 Reviews/index.html
@@ -17,7 +17,9 @@
         </header>
         <main class="main">
             <div class="card">
-                <div class="person-photo"></div>
+                <div class="person-photo">
+                    <div class="background-person"></div>
+                </div>
                 <h1 class="person-name">Susan Smith</h1>
                 <p class="person-job">Web Developer</p>
                 <hr class="grey medium">
