--- a/Project 3 Reviews/index.html
+++ b/Project 3 Reviews/index.html
@@ -29,7 +29,7 @@
                 <div class="slider">
                     <span class="left"><</span> <span class="right">></span>
                 </div>
-                <button class="btn blue">Surprise me</button>
+                <button class="btn blue surprise">Surprise me</button>
             </div>
         </main>
     </div>
