4th project continue Navbar

--- a/Project 4 MenuBar/index.html
+++ b/Project 4 MenuBar/index.html
@@ -34,7 +34,7 @@
                 </li>
             </ul>
             <div class="nav-icon">
-                i.fas.fa-nav
+                <i class="fas fa-navbar fa-3x"></i>
             </div>
             <ul class="menuItemMobile">
                 <li>
