--- a/Project 4 MenuBar/index.html
+++ b/Project 4 MenuBar/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu change for mobile & Animation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="/fontawesome-free-5.12.0-web/css/all.css">
     <link rel="stylesheet" href="style.css">
     <!-- 
 
@@ -36,7 +37,7 @@
             </ul>
             
             <div class="nav-icon">
-                <i class="fas fa-bars fa-3x"></i>
+                <i class="fas fa-bars fa-2x"></i>
             </div>
 
             <div class="socIcons">
